Moved the html of music, stopwatch and timer

--- a/Public/timer.html
+++ b/Public/timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="timer.css">
+    <link rel="stylesheet" href="./Timer/timer.css">
     <title>Pomodoro Timer</title>
 </head>
 
@@ -15,12 +15,12 @@
         <h1>Stud-But</h1>
         <nav>
           <ul>
-            <li><a href="file:///Users/shokozuki/Portfolio/Mainpage/mainpage.html" class="task">Tasks</a></li>
+            <li><a href="./Index.html" class="task">Tasks</a></li>
             <li><a href="">Resources</a></li>
-            <li><a href="file:///Users/shokozuki/Portfolio/Stopwatch/stopwatch.html" class="StopWatch"> Stopwatch </a>
+            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a>
             </li>
-            <li><a href="file:///Users/shokozuki/Portfolio/Timer/timer.html" class="timer">Timer</a></li>
-            <li><a href="file:///Users/shokozuki/Portfolio/Music/music.html">Music</a></li>
+            <li><a href="./timer.html" class="timer">Timer</a></li>
+            <li><a href="./music.html">Music</a></li>
           </ul>
         </nav>
 
@@ -47,6 +47,6 @@
         <button id="stop" class="btn">Stop</button>
         <button id="reset" class="btn">Reset</button>
     </div>
-    <script src="timer.js"></script>
+    <script src="./Timer/timer.js"></script>
 </body>
 </html>
