Added resource page

--- a/Public/Index.html
+++ b/Public/Index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Stud-Bud</title>
-  <link href="./Mainpage/scss/main.scss" rel ="stylesheet" type="text/css" />
+  <link href="./Mainpage/scss/main.css" rel ="stylesheet" type="text/css" >
 </head>
 
 <body>
