add the read me file

--- a/Public/resource.html
+++ b/Public/resource.html
@@ -28,18 +28,18 @@
   <!--header ends here-->
     <!--Resource starts here -->
 <body>
-    <div class ="resource" id="app">
-        <!--<div class="resource__sidebar">
-            <button class="resource__add" type="button">Add Resource</button>
-            <div class="resource__list-item resource__list-item--selected">
-                <div class="resource__small-title">Lecture Notes</div>
-                <div class="resource__small-body">I learnt nothing today</div>
-                <div class="resource__small-updated">Thursday 3:30pm</div>
+    <div class ="resources" id="app">
+        <!--<div class="resources__sidebar">
+            <button class="resources__add" type="button">Add Resource</button>
+            <div class="resources__list-item resource__list-item--selected">
+                <div class="resources__small-title">Lecture Notes</div>
+                <div class="resources__small-body">I learnt nothing today</div>
+                <div class="resources__small-updated">Thursday 3:30pm</div>
             </div>
         </div>
-        <div class="resource__preview">
-            <input class="resource__title" type="text" placeholder="Enter a title...">
-            <textarea class="resource__body">I am the resource body...</textarea>
+        <div class="resources__preview">
+            <input class="resources__title" type="text" placeholder="Enter a title...">
+            <textarea class="resources__body">I am the resource body...</textarea>
         </div> -->
 
     </div>
