resource page added in index

--- a/Public/music.html
+++ b/Public/music.html
@@ -10,24 +10,23 @@
   <script src="https://kit.fontawesome.com/3a829dd0f3.js" crossorigin="anonymous"></script>
 </head>
 
-<!--header starts here-->
-<header>
-  <div class="container">
-    <div class="navbar">
-      <h1>Stud-But</h1>
-      <nav>
-        <ul>
-          <li><a href="./Index.html" class="task">Tasks</a></li>
-            <li><a href="">Resources</a></li>
-            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a>
-            </li>
+  <!--header starts here-->
+  <header>
+    <div class="container">
+      <div class="navbar">
+        <h1>Stud-But</h1>
+        <nav>
+          <ul>
+            <li><a href="./Index.html" class="task">Tasks</a></li>
+            <li><a href="./resource.html" class="resource">Resources</a></li>
+            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a></li>
             <li><a href="./timer.html" class="timer">Timer</a></li>
-            <li><a href="./music.html">Music</a></li>
-        </ul>
-      </nav>
+            <li><a href="./music.html" class="music">Music</a></li>
+          </ul>
+        </nav>
 
-</header>
-<!--header ends here-->
+  </header>
+  <!--header ends here-->
 
 <body>
   <div class="container">
