--- a/Public/timer.html
+++ b/Public/timer.html
@@ -16,11 +16,10 @@
         <nav>
           <ul>
             <li><a href="./Index.html" class="task">Tasks</a></li>
-            <li><a href="">Resources</a></li>
-            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a>
-            </li>
+            <li><a href="./resource.html" class="resource">Resources</a></li>
+            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a></li>
             <li><a href="./timer.html" class="timer">Timer</a></li>
-            <li><a href="./music.html">Music</a></li>
+            <li><a href="./music.html" class="music">Music</a></li>
           </ul>
         </nav>
 
