--- a/Public/resource.html
+++ b/Public/resource.html
@@ -16,11 +16,10 @@
         <nav>
           <ul>
             <li><a href="./Index.html" class="task">Tasks</a></li>
-            <li><a href="">Resources</a></li>
-            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a>
-            </li>
+            <li><a href="./resource.html" class="resource">Resources</a></li>
+            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a></li>
             <li><a href="./timer.html" class="timer">Timer</a></li>
-            <li><a href="./music.html">Music</a></li>
+            <li><a href="./music.html" class="music">Music</a></li>
           </ul>
         </nav>
 
@@ -33,11 +32,11 @@
         <div class="create">
             <input type="text" placeholder="Title" value="Insert Title" id="title">
             <input type="text" placeholder="Links" value="Insert Links" id="link">
-            <button class="btn">New</button>
+            <button class="btn">Create</button>
         </div>
         <div class="list">
             <ul class="ullist">
-                
+
             </ul>
         </div>
     </div>
