moved the task list input inside the kanban

--- a/Public/Index.html
+++ b/Public/Index.html
@@ -67,7 +67,7 @@
         <!--kaban board starts here-->
 
         <div class="kanban" id="kanban">
-          <div class="kanban__column">
+          <div class="kanban__column" id="todo">
             <input type="text" placeholder="Title" value="To do" id="title">
             <div class="kanban__items">
               <div class="kanban__dropzone"></div>
