--- a/Public/music.html
+++ b/Public/music.html
@@ -48,18 +48,13 @@
       <div class="playlist">
         <h2>Playlist</h2>
         <ul class="song-list">
-          <li data-src="playlist/tomorrow.mp3" data-name="Tomorrow" data-index="0">
-            <span>Tomorrow</span><span>04:55</span></li>
-          <li data-src="playlist/sunny.mp3" data-name="Sunny" data-index="1"><span>Sunny</span><span>02:20</span></li>
-          <li data-src="playlist/funnysong.mp3" data-name="Funnysong" data-index="2">
-            <span>Funnysong</span><span>03:07</span></li>
-          <li data-src="playlist/epic.mp3" data-name="Epic" data-index="3"><span>Epic</span><span>02:59</span></li>
-          <li data-src="playlist/energy.mp3" data-name="Energy" data-index="4"><span>Energy</span><span>03:00</span>
-          </li>
-          <li data-src="playlist/dubstep.mp3" data-name="Dubstep" data-index="5"><span>Dubstep</span><span>02:05</span>
-          </li>
-          <li data-src="playlist/betterdays.mp3" data-name="Betterdays" data-index="6">
-            <span>Betterdays</span><span>02:34</span></li>
+          <li data-src="Music/playlist/tomorrow.mp3" data-name="Tomorrow" data-index="0"><span>Tomorrow</span><span>04:55</span></li>
+          <li data-src="Music/playlist/sunny.mp3" data-name="Sunny" data-index="1"><span>Sunny</span><span>02:20</span></li>
+          <li data-src="Music/playlist/funnysong.mp3" data-name="Funnysong" data-index="2"><span>Funnysong</span><span>03:07</span></li>
+          <li data-src="Music/playlist/epic.mp3" data-name="Epic" data-index="3"><span>Epic</span><span>02:59</span></li>
+          <li data-src="Music/playlist/energy.mp3" data-name="Energy" data-index="4"><span>Energy</span><span>03:00</span></li>
+          <li data-src="Music/playlist/dubstep.mp3" data-name="Dubstep" data-index="5"><span>Dubstep</span><span>02:05</span></li>
+          <li data-src="Music/playlist/betterdays.mp3" data-name="Betterdays" data-index="6"><span>Betterdays</span><span>02:34</span></li>
 
         </ul>
         <audio src="" id="audio"></audio>
