organized stopwatch page

--- a/Public/stopwatch.html
+++ b/Public/stopwatch.html
@@ -25,6 +25,7 @@
   </header>
   <!--header ends here-->
 
+  <!--added container for stopwatch to allow the users to select the option provided-->
     <body>
         <div class="container">
             <img src="./Stopwatch/stopwatch.jpg" width="400px" />
