--- a/Public/music.html
+++ b/Public/music.html
@@ -10,23 +10,26 @@
   <script src="https://kit.fontawesome.com/3a829dd0f3.js" crossorigin="anonymous"></script>
 </head>
 
-  <!--header starts here-->
-  <header>
-    <div class="container">
-      <div class="navbar">
-        <h1>Stud-But</h1>
-        <nav>
-          <ul>
-            <li><a href="./Index.html" class="task">Tasks</a></li>
-            <li><a href="./resource.html" class="resource">Resources</a></li>
-            <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a></li>
-            <li><a href="./timer.html" class="timer">Timer</a></li>
-            <li><a href="./music.html" class="music">Music</a></li>
-          </ul>
-        </nav>
+<!--header starts here-->
+<header>
+  <div class="container">
+    <div class="navbar">
+      <h1>Stud-But</h1>
+      <nav>
+        <ul>
+          <li><a href="./Index.html" class="task">Tasks</a></li>
+          <li><a href="./resource.html" class="resource">Resources</a></li>
+          <li><a href="./stopwatch.html" class="StopWatch"> Stopwatch </a></li>
+          <li><a href="./timer.html" class="timer">Timer</a></li>
+          <li><a href="./music.html" class="music">Music</a></li>
+        </ul>
+      </nav>
 
-  </header>
-  <!--header ends here-->
+</header>
+<!--header ends here-->
+
+<!--Music container starts here-->
+<!--I have contained record image and added class so I can add animation to it. The adjust bar was added named class-->
 
 <body>
   <div class="container">
@@ -45,16 +48,24 @@
           <button class="next" id="next"><i class="fas fa-step-forward"></i></button>
         </div>
       </div>
+     <!--Made a song list with class named playlist and I have put all the songs into one class-->
       <div class="playlist">
         <h2>Playlist</h2>
         <ul class="song-list">
-          <li data-src="Music/playlist/tomorrow.mp3" data-name="Tomorrow" data-index="0"><span>Tomorrow</span><span>04:55</span></li>
-          <li data-src="Music/playlist/sunny.mp3" data-name="Sunny" data-index="1"><span>Sunny</span><span>02:20</span></li>
-          <li data-src="Music/playlist/funnysong.mp3" data-name="Funnysong" data-index="2"><span>Funnysong</span><span>03:07</span></li>
-          <li data-src="Music/playlist/epic.mp3" data-name="Epic" data-index="3"><span>Epic</span><span>02:59</span></li>
-          <li data-src="Music/playlist/energy.mp3" data-name="Energy" data-index="4"><span>Energy</span><span>03:00</span></li>
-          <li data-src="Music/playlist/dubstep.mp3" data-name="Dubstep" data-index="5"><span>Dubstep</span><span>02:05</span></li>
-          <li data-src="Music/playlist/betterdays.mp3" data-name="Betterdays" data-index="6"><span>Betterdays</span><span>02:34</span></li>
+          <li data-src="Music/playlist/tomorrow.mp3" data-name="Tomorrow" data-index="0">
+            <span>Tomorrow</span><span>04:55</span></li>
+          <li data-src="Music/playlist/sunny.mp3" data-name="Sunny" data-index="1"><span>Sunny</span><span>02:20</span>
+          </li>
+          <li data-src="Music/playlist/funnysong.mp3" data-name="Funnysong" data-index="2">
+            <span>Funnysong</span><span>03:07</span></li>
+          <li data-src="Music/playlist/epic.mp3" data-name="Epic" data-index="3"><span>Epic</span><span>02:59</span>
+          </li>
+          <li data-src="Music/playlist/energy.mp3" data-name="Energy" data-index="4">
+            <span>Energy</span><span>03:00</span></li>
+          <li data-src="Music/playlist/dubstep.mp3" data-name="Dubstep" data-index="5">
+            <span>Dubstep</span><span>02:05</span></li>
+          <li data-src="Music/playlist/betterdays.mp3" data-name="Betterdays" data-index="6">
+            <span>Betterdays</span><span>02:34</span></li>
 
         </ul>
         <audio src="" id="audio"></audio>
